teamspeak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamspeak
  namespace: teamspeak-server
  labels:
    app: teamspeak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamspeak
  template:
    metadata:
      labels:
        app: teamspeak
    spec:
      containers:
        - name: teamspeak
          image: teamspeak
          ports:
              - containerPort: 9987
              - containerPort: 10011
              - containerPort: 30033
