mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: teamspeak-server
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      name: db-port
      port: 3306
      targetPort: 3306
