teamspeak-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: teamspeak-ingress
  namespace: teamspeak-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ts.pskowronski.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: teamspeak
              servicePort: 9987
